# command_as_win_service

./: CMakeLists.txt  README.md
exe/v2/: win_services.exp  win_services.lib
src/: args.cpp  base.h  main.cpp  utils.cpp
